...
      app:layout_constraintStart_toStartOf="@+id/venuesNameAdressTextView"
      app:layout_constraintTop_toBottomOf="@+id/venuesNameAdressTextView"
      tools:text="Distance" />

  <ImageButton
      android:padding="@dimen/favorites_padding"
      android:id="@+id/imageFavorite"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/default_margin"
      android:layout_marginBottom="@dimen/default_margin"
      android:background="@android:color/transparent"
      android:contentDescription="TODO"
...
